fix: center product amount-num when text overflows

--- a/src/blocks/product/__amount-num/product__amount-num.css
+++ b/src/blocks/product/__amount-num/product__amount-num.css
@@ -2,6 +2,8 @@
   margin: 0 3px;
   text-align: center;
   width: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 @media (min-width: 1024px) {
